--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -82,7 +82,7 @@
             <!-- /.col -->
           </div>
         </form>
-        <a href="@Url.Action("Index", "Account")" class="text-center">Ya tengo una cuenta</a>
+        <a href="@Url.Action("Index", "Auth")" class="text-center">Ya tengo una cuenta</a>
       </div>
       <!-- /.form-box -->
     </div><!-- /.card -->
