--- a/Views/Account/ForgotPassword.cshtml
+++ b/Views/Account/ForgotPassword.cshtml
@@ -50,10 +50,10 @@
       </form>
 
       <p class="mt-3 mb-1">
-        <a href="@Url.Action("Index", "Account")">Ya tengo una cuenta</a>
+        <a href="@Url.Action("Index", "Auth")">Ya tengo una cuenta</a>
       </p>
       <p class="mb-0">
-        <a href="@Url.Action("Register", "Account")" class="text-center">Registrarse</a>
+        <a href="@Url.Action("Register", "Auth")" class="text-center">Registrarse</a>
       </p>
     </div>
     <!-- /.login-card-body -->
