--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -104,7 +104,7 @@
                     <div class="card-body">
                         <h5 class="card-title">WebAppCS</h5>
                         <p class="card-text">Software en desarrollo.</p>
-                        <a href="@Url.Action("Index", "Account")" class="btn btn-primary">Seleccionar</a>
+                        <a href="@Url.Action("Index", "Auth")" class="btn btn-primary">Seleccionar</a>
                     </div>
                 </div>
             </div>
