--- a/Views/Permissions/Index.cshtml
+++ b/Views/Permissions/Index.cshtml
@@ -3,6 +3,19 @@
     ViewData["SubTitle"] = "Roles";
     Layout = "_Layout";
 }
+@{
+    var usuario = AuthService.GetCurrentUser(Context);
+    var permisos = AuthService.GetCurrentPermissions(Context);
+}
+@if (permisos["roles-permisos"]["acceso"] == false)
+{
+    <script>
+        window.location.href = '@Url.Action("Index", "Dashboard")';
+    </script>
+    <noscript>
+        <meta http-equiv="refresh" content="0; url='@Url.Action("Index", "Dashboard")'" />
+    </noscript>
+}
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
     <div class="content">
@@ -13,17 +26,21 @@
                     <div class="col-sm-6">
                         <h1 class="m-0 text-dark">
                             Roles 
-                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modal-success" >
-                                <i class="fas fa-plus"></i>
-                            </button>
+                            @if (permisos["roles-permisos"]["crear"] == true){
+                                <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modal-success" >
+                                    <i class="fas fa-plus"></i>
+                                </button>
+                            }
                         </h1>
                     </div>
-                    <div class="col-sm-6">
-                        <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="@Url.Action("Index", "Users")">Aquí</a></li>
-                            <li class="breadcrumb-item active">Gestionar usuarios</li>
-                        </ol>
-                    </div>
+                    @if (permisos["usuarios"]["acceso"] == true){
+                        <div class="col-sm-6">
+                            <ol class="breadcrumb float-sm-right">
+                                <li class="breadcrumb-item"><a href="@Url.Action("Index", "Users")">Aquí</a></li>
+                                <li class="breadcrumb-item active">Gestionar usuarios</li>
+                            </ol>
+                        </div>
+                    }
                 </div>
             </div>
         </div>
@@ -60,18 +77,22 @@
                             <td>@row["nombre"]</td>
                             <td>
                                 <div class="btn-group btn-group-sm">
-                                    <a href="@Url.Action("PermissionsRole", "Permissions", new { id = row["Id"] })" class="btn btn-info"><i class="fa fa-list-alt"></i></a>
-
-                                    <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#modal-warning" 
-                                        onclick="document.getElementById('roleEdit').value = '@row["id"]'; 
-                                                document.getElementById('rol').value = '@row["nombre"]';">
-                                        <i class="fas fa-pen"></i>
-                                    </button>
+                                    @if (permisos["roles-permisos"]["editar"] == true){
+                                        
+                                        <a href="@Url.Action("PermissionsRole", "Permissions", new { id = row["Id"] })" class="btn btn-info"><i class="fa fa-list-alt"></i></a>
                                     
-                                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger" 
-                                        onclick="document.getElementById('roleId').value = '@row["id"]'">
-                                        <i class="fas fa-trash"></i>
-                                    </button>
+                                        <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#modal-warning" 
+                                            onclick="document.getElementById('roleEdit').value = '@row["id"]'; 
+                                                    document.getElementById('rol').value = '@row["nombre"]';">
+                                            <i class="fas fa-pen"></i>
+                                        </button>
+                                    }
+                                    @if (permisos["roles-permisos"]["eliminar"] == true){
+                                        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger" 
+                                            onclick="document.getElementById('roleId').value = '@row["id"]'">
+                                            <i class="fas fa-trash"></i>
+                                        </button>
+                                    }
                                 </div>
                             </td>
                         </tr>
