--- a/Views/Shared/_MainSidebar.cshtml
+++ b/Views/Shared/_MainSidebar.cshtml
@@ -1,9 +1,15 @@
+@{
+    var usuario = AuthService.GetCurrentUser(Context);
+    var permisos = AuthService.GetCurrentPermissions(Context);
+}
 <!-- Main Sidebar Container -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="#" class="brand-link">
         @* <img src="/images/LOGO.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-1"> *@
-        <img src="/images/LOGO.png" alt="AdminLTE Logo" class="brand-image elevation-1">
+        @* <img src="/images/LOGO.png" alt="AdminLTE Logo" class="brand-image elevation-1"> *@
+        <img src="~/public/dist/img/AdminLTELogo.png" alt="AdminLTE Logo"
+            class="brand-image img-circle elevation-3" style="opacity: .8">
         <span class="brand-text font-weight-light">@ViewData["Title"]</span>
     </a>
 
@@ -12,7 +18,7 @@
         <!-- Sidebar Menu -->
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                
+
                 @* Menú desplegable *@
                 @* <li class="nav-item has-treeview menu-open">
                     <a href="#" class="nav-link active">
@@ -43,22 +49,48 @@
                         <i class="nav-icon fas fa-tachometer-alt"></i>
                         <p>
                             Dashboard
-                            <span class="right badge badge-danger">New</span>
+                            @* <span class="right badge badge-danger">New</span> *@
                         </p>
                     </a>
                 </li>
 
-                
-                    <li class="nav-item">
-                        <a href="@Url.Action("Index", "Users")" class="nav-link">
-                            <i class="nav-icon fa fa-user"></i>
+                @if (permisos["usuarios"]["acceso"] == true || permisos["roles-permisos"]["acceso"] == true){
+                    <li class="nav-item has-treeview">
+                        <a href="#" class="nav-link">
+                            <i class="nav-icon fas fa-user-plus"></i>
                             <p>
-                                Usuarios
-                                <span class="right badge badge-danger">New</span>
+                                Control de Usuarios
+                                <i class="right fas fa-angle-left"></i>
                             </p>
                         </a>
+                        <ul class="nav nav-treeview">
+
+                            @if (permisos["usuarios"]["acceso"] == true){
+                                <li class="nav-item">
+                                    <a href="@Url.Action("Index", "Users")" class="nav-link">
+                                        <i class="nav-icon fa fa-user"></i>
+                                        <p>
+                                            Usuarios
+                                            <span class="right badge badge-danger">New</span>
+                                        </p>
+                                    </a>
+                                </li>
+                            }
+
+                            @if (permisos["roles-permisos"]["acceso"] == true){
+                                <li class="nav-item">
+                                    <a href="@Url.Action("Index", "Permissions")" class="nav-link">
+                                        <i class="nav-icon fa fa-user-tag"></i>
+                                        <p>
+                                            Roles y Permisos
+                                            <span class="right badge badge-danger">New</span>
+                                        </p>
+                                    </a>
+                                </li>
+                            }
+                        </ul>
                     </li>
-                
+                }
             </ul>
         </nav>
         <!-- /.sidebar-menu -->
