--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -3,6 +3,19 @@
     ViewData["SubTitle"] = "Usuarios";
     Layout = "_Layout";
 }
+@{
+    var usuario = AuthService.GetCurrentUser(Context);
+    var permisos = AuthService.GetCurrentPermissions(Context);
+}
+@if (permisos["usuarios"]["acceso"] == false)
+{
+    <script>
+        window.location.href = '@Url.Action("Index", "Dashboard")';
+    </script>
+    <noscript>
+        <meta http-equiv="refresh" content="0; url='@Url.Action("Index", "Dashboard")'" />
+    </noscript>
+}
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
     <div class="content">
@@ -13,15 +26,19 @@
                     <div class="col-sm-6">
                         <h1 class="m-0 text-dark">
                             Usuarios 
-                            <a href="@Url.Action("Create", "Users")" class="btn btn-success"><i class="fas fa-plus"></i></a>
+                            @if (permisos["usuarios"]["crear"] == true){
+                                <a href="@Url.Action("Create", "Users")" class="btn btn-success"><i class="fas fa-plus"></i></a>
+                            }
                         </h1>
                     </div>
-                    <div class="col-sm-6">
-                        <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="@Url.Action("Index", "Permissions")">Aquí</a></li>
-                            <li class="breadcrumb-item active">Gestionar roles y permisos</li>
-                        </ol>
-                    </div>
+                    @if (permisos["roles-permisos"]["acceso"] == true){
+                        <div class="col-sm-6">
+                            <ol class="breadcrumb float-sm-right">
+                                <li class="breadcrumb-item"><a href="@Url.Action("Index", "Permissions")">Aquí</a></li>
+                                <li class="breadcrumb-item active">Gestionar roles y permisos</li>
+                            </ol>
+                        </div>
+                    }
                 </div>
             </div>
         </div>
@@ -78,11 +95,16 @@
                             </td>
                             <td>
                                 <div class="btn-group btn-group-sm">
-                                    <a href="@Url.Action("Edit", "Users", new { id = row["Id"] })" class="btn btn-info"><i class="fas fa-pen"></i></a>
-                                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger" 
-                                        onclick="document.getElementById('userId').value = '@row["id"]'">
-                                        <i class="fas fa-trash"></i>
-                                    </button>
+                                    @if (permisos["usuarios"]["editar"] == true){
+                                        <a href="@Url.Action("Edit", "Users", new { id = row["Id"] })" class="btn btn-info"><i class="fas fa-pen"></i></a>
+                                    }
+
+                                    @if (permisos["usuarios"]["eliminar"] == true){
+                                        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger" 
+                                            onclick="document.getElementById('userId').value = '@row["id"]'">
+                                            <i class="fas fa-trash"></i>
+                                        </button>
+                                    }
                                 </div>
                             </td>
                         </tr>
