--- a/Views/Users/Edit.cshtml
+++ b/Views/Users/Edit.cshtml
@@ -7,7 +7,7 @@
     var usuario = AuthService.GetCurrentUser(Context);
     var permisos = AuthService.GetCurrentPermissions(Context);
 }
-@if (permisos["usuarios"]["acceso"] == false || permisos["usuarios"]["editar"] == false)
+@if (Model.Nombre == "root" || (permisos["usuarios"]["acceso"] == false || permisos["usuarios"]["editar"] == false))
 {
     <script>
         window.location.href = '@Url.Action("Index", "Dashboard")';
@@ -23,8 +23,9 @@
                 <div class="row mb-2">
                     <div class="col-sm-6">
                         <h1 class="m-0 text-dark">
-                            Usuarios 
-                            <a href="@Url.Action("Index","Users")" class="btn btn-secondary"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i></a>
+                            Usuarios
+                            <a href="@Url.Action("Index", "Users")" class="btn btn-secondary"><i
+                                    class="fa fa-chevron-circle-left" aria-hidden="true"></i></a>
                         </h1>
                     </div>
                     <div class="col-sm-6">
@@ -46,7 +47,7 @@
                             <h3 class="card-title">Editar usuario</h3>
                         </div>
 
-                        <form asp-action="Update" asp-controller="Users" method="post">
+                        <form asp-action="UpdateUser" asp-controller="Users" method="post">
                             <input type="hidden" name="Id" asp-for="Id" value="@Model.Id" />
 
                             <div class="card-body">
@@ -54,10 +55,15 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"><i class="fas fa-user-plus"></i></span>
                                     </div>
-                                    <input type="text" class="form-control" placeholder="Rut" value="@Model.Rut" name="Rut" asp-for="Rut" required> 
-                                    <div class="input-group"> 
+                                    <input type="text" class="form-control" placeholder="Rut" value="@Model.Rut"
+                                        name="Rut" asp-for="Rut" required>
+                                    <div class="input-group">
                                         <span asp-validation-for="Rut" class="text-danger"></span>
-                                        @if (TempData["RutError"] != null){<div class="text-danger">@TempData["RutError"]</div>}
+                                        @if (TempData["RutError"] != null)
+                                        {
+                                            <div class="text-danger">
+                                                @TempData["RutError"]</div>
+                                        }
                                     </div>
                                 </div>
 
@@ -65,12 +71,14 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"><i class="fa fa-user"></i></span>
                                     </div>
-                                    <input type="text" class="form-control" placeholder="Nombre" value="@Model.Nombre" name="Nombre" asp-for="Nombre" required>
-                                    <input type="text" class="form-control" placeholder="Apellidos" value="@Model.Apellidos" name="Apellidos" asp-for="Apellidos" required>
-                                    <div class="input-group"> 
+                                    <input type="text" class="form-control" placeholder="Nombre" value="@Model.Nombre"
+                                        name="Nombre" asp-for="Nombre" required>
+                                    <input type="text" class="form-control" placeholder="Apellidos"
+                                        value="@Model.Apellidos" name="Apellidos" asp-for="Apellidos" required>
+                                    <div class="input-group">
                                         <span asp-validation-for="Nombre" class="text-danger"></span>
                                     </div>
-                                    <div class="input-group"> 
+                                    <div class="input-group">
                                         <span asp-validation-for="Apellidos" class="text-danger"></span>
                                     </div>
                                 </div>
@@ -79,8 +87,9 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                                     </div>
-                                    <input type="email" class="form-control" placeholder="Correo electrónico" value="@Model.Email" name="Email" asp-for="Email" required>
-                                    <div class="input-group"> 
+                                    <input type="email" class="form-control" placeholder="Correo electrónico"
+                                        value="@Model.Email" name="Email" asp-for="Email" required>
+                                    <div class="input-group">
                                         <span asp-validation-for="Email" class="text-danger"></span>
                                     </div>
                                 </div>
@@ -89,8 +98,9 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"><i class="fas fa-phone"></i></span>
                                     </div>
-                                    <input type="text" class="form-control" placeholder="Teléfono" value="@Model.Telefono" name="Telefono" asp-for="Telefono" required>
-                                    <div class="input-group"> 
+                                    <input type="text" class="form-control" placeholder="Teléfono"
+                                        value="@Model.Telefono" name="Telefono" asp-for="Telefono" required>
+                                    <div class="input-group">
                                         <span asp-validation-for="Telefono" class="text-danger"></span>
                                     </div>
                                 </div>
@@ -101,38 +111,23 @@
                                     </div>
                                     <select class="form-control" name="Id_rol" asp-for="Id_rol" required>
                                         <option value="">Seleccionar Rol</option>
-                                        @foreach (System.Data.DataRow row in ViewBag.Roles.Rows){
-                                            @if (Model.Id_rol == Convert.ToInt32(@row["id"])){
+                                        @foreach (System.Data.DataRow row in ViewBag.Roles.Rows)
+                                        {
+                                            @if (Model.Id_rol == Convert.ToInt32(@row["id"]))
+                                            {
                                                 <option value="@row["id"]" selected>@row["nombre"]</option>
-                                            }else{
+                                            }
+                                            else
+                                            {
                                                 <option value="@row["id"]">@row["nombre"]</option>
                                             }
                                         }
                                     </select>
-                                    <div class="input-group"> 
+                                    <div class="input-group">
                                         <span asp-validation-for="Id_rol" class="text-danger"></span>
                                     </div>
                                 </div>
 
-                                <div class="input-group mb-3">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text"><i class="fas fa-user-check"></i></span>
-                                    </div>
-                                    <select class="form-control" name="Id_estado" asp-for="Id_estado" required>
-                                        <option value="">Seleccionar Estado</option>
-                                        @foreach (System.Data.DataRow row in ViewBag.Estados.Rows){
-                                            @if (Model.Id_estado == Convert.ToInt32(@row["id"])){
-                                                <option value="@row["id"]" selected>@row["estado"]</option>
-                                            }else{
-                                                <option value="@row["id"]">@row["estado"]</option>
-                                            }
-                                        }
-                                    </select>
-                                    <div class="input-group"> 
-                                        <span asp-validation-for="Id_estado" class="text-danger"></span>
-                                    </div>
-                                </div>
-                                
                             </div>
 
                             <div class="card-footer">
@@ -144,6 +139,7 @@
                 </div>
 
                 <div class="col-md-6">
+                    @if (permisos["usuarios"]["cambiar_password"] == true){
                     <div class="card card-warning">
                         <div class="card-header">
                             <h3 class="card-title">Editar Contraseña</h3>
@@ -158,8 +154,10 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"><i class="fas fa-lock"></i></span>
                                     </div>
-                                    <input type="password" class="form-control" name="Password" asp-for="Password" placeholder="Contraseña" required>
-                                    <input type="password" class="form-control" name="RepeatPassword" asp-for="RepeatPassword" placeholder="Repetir Contraseña" required>
+                                    <input type="password" class="form-control" name="Password" asp-for="Password"
+                                        placeholder="Contraseña" required>
+                                    <input type="password" class="form-control" name="RepeatPassword"
+                                        asp-for="RepeatPassword" placeholder="Repetir Contraseña" required>
 
                                     <div class="input-group">
                                         <span asp-validation-for="Password" class="text-danger"></span>
@@ -168,7 +166,7 @@
                                         <span asp-validation-for="RepeatPassword" class="text-danger"></span>
                                     </div>
                                 </div>
-                                
+
                             </div>
 
                             <div class="card-footer">
@@ -177,6 +175,51 @@
                             </div>
                         </form>
                     </div>
+                    }
+                    @if (permisos["usuarios"]["activar_desactivar"] == true)
+                    {
+                    <div class="card card-info">
+                        <div class="card-header">
+                            <h3 class="card-title">Editar Estado</h3>
+                        </div>
+
+                        <form asp-action="UpdateEstado" asp-controller="Users" method="post">
+                            <input type="hidden" name="Id" asp-for="Id" value="@Model.Id" />
+
+                            <div class="card-body">
+
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fas fa-user-check"></i></span>
+                                    </div>
+                                    <select class="form-control" name="Id_estado" asp-for="Id_estado" required>
+                                        <option value="">Seleccionar Estado</option>
+                                        @foreach (System.Data.DataRow row in ViewBag.Estados.Rows)
+                                        {
+                                            @if (Model.Id_estado == Convert.ToInt32(@row["id"]))
+                                            {
+                                                <option value="@row["id"]" selected>@row["estado"]</option>
+                                            }
+                                            else
+                                            {
+                                                <option value="@row["id"]">@row["estado"]</option>
+                                            }
+                                        }
+                                    </select>
+                                    <div class="input-group">
+                                        <span asp-validation-for="Id_estado" class="text-danger"></span>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <div class="card-footer">
+                                <button type="submit" class="btn btn-info float-right">Salvar Cambios</button>
+                                <button type="reset" class="btn btn-secondary">Resetear</button>
+                            </div>
+                        </form>
+                    </div>
+                    }
                 </div>
 
             </div>
@@ -185,4 +228,5 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
+<script
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
