--- a/Views/Users/Partials/Modal-RestoreUser.cshtml
+++ b/Views/Users/Partials/Modal-RestoreUser.cshtml
@@ -1,21 +1,21 @@
-<div class="modal fade" id="modal-danger">
+<div class="modal fade" id="modal-info">
     <div class="modal-dialog">
         <div class="modal-content ">
-            <div class="modal-header bg-danger">
+            <div class="modal-header bg-info">
                 <h4 class="modal-title">Atención ⚠️</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <p>Al borrar este registro, se irá a la papelera reciclaje. ¿Desea continuar?</p>
+                <p>Al restaurar este registro, este usuario volverá a estar operativo. ¿Desea continuar?</p>
             </div>
             <div class="modal-footer justify-content-between">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
 
-                <form id="deleteForm" method="post" action="@Url.Action("Delete", "Users")">
-                    <input type="hidden" name="id" id="DeleteUserId">
-                    <button type="submit" class="btn btn-danger">Eliminar</button>
+                <form id="restoreForm" method="post" action="@Url.Action("Restore", "Users")">
+                    <input type="hidden" name="id" id="RestoreUserId">
+                    <button type="submit" class="btn btn-info">Restaurar</button>
                 </form>
 
             </div>
